src/styles.scss
@import "~@angular/material/theming";
@import 'breakpoints';
@import 'themes/themes';

/* Include common styles */
@include mat-core();

.eschomat-root {
  /* All custom styles, which probably override material styles */
  @import './styles/global';
}

:root {
  --content-padding: 16px;
}

html,
body {
  height: 100%;
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

* {
  box-sizing: border-box;
  font-family: 'Roboto', Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
}

